--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "commitlint": "^18.6.0",
     "cz-customizable": "^7.0.0",
     "eslint": "^8.49.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "eslint-plugin-vue": "^9.21.0",
     "husky": "^7.0.4",
     "lint-staged": "^15.2.1",
