--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
+    "@icon-park/vue-next": "^1.4.2",
     "@rushstack/eslint-patch": "^1.3.3",
     "commitizen": "^4.3.0",
     "commitlint": "^18.6.0",
