--- a/packages/base/tsconfig.node.json
+++ b/packages/base/tsconfig.node.json
@@ -18,6 +18,7 @@
 
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "types": ["node"]
+    "types": ["node"],
+    "lib": ["DOM"]
   }
 }
