--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.54.4",
+    "@arco-plugins/vite-vue": "^1.4.5",
     "@tsconfig/node20": "^20.1.2",
     "@types/node": "^20.11.13",
     "@vitejs/plugin-vue": "^5.0.3",
