--- a/packages/main/package.json
+++ b/packages/main/package.json
@@ -15,12 +15,16 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@arco-design/web-vue": "^2.54.4",
+    "@arco-plugins/vite-vue": "^1.4.5",
     "@tsconfig/node20": "^20.1.2",
     "@types/node": "^20.11.10",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^6.1.1",
     "typescript": "~5.3.0",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.11",
     "vue-tsc": "^1.8.27"
   }
