--- a/packages/main/tsconfig.node.json
+++ b/packages/main/tsconfig.node.json
@@ -5,7 +5,11 @@
     "vitest.config.*",
     "cypress.config.*",
     "nightwatch.conf.*",
-    "playwright.config.*"
+    "playwright.config.*",
+    "src/**/*.ts", 
+    "src/**/*.d.ts", 
+    "src/**/*.tsx", 
+    "src/**/*.vue"
   ],
   "compilerOptions": {
     "composite": true,
@@ -14,6 +18,7 @@
 
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "types": ["node"]
+    "types": ["node"],
+    "lib": ["DOM"]
   }
 }
